fixed:overflow

--- a/scss/_sections/_why.scss
+++ b/scss/_sections/_why.scss
@@ -59,6 +59,7 @@
     #why{
         background-color: $bg-color;
         .why{
+            align-items: start;
             @include dflex;
             justify-content: space-evenly;
             flex-wrap: wrap;
